# Billiken-Blueprint

./: ALL_DEPARTMENTS_RATINGS.md  INSTRUCTOR_RATINGS_FLOW.md  RATINGS_AND_SECTIONS_OVERVIEW.md  README.md  TESTING_INSTRUCTOR_RATINGS.md  TESTING_ON_WEBSITE.md  TESTING_RMP_REVIEWS.md  compose.yaml  package-lock.json
backend/: .dockerignore  .gitignore  Dockerfile  alembic.ini  check_and_import_rmp.py  check_and_seed_courses.py  course_reqs.yaml  entrypoint.sh  error_res.json  get_courses.py  import_rmp_ratings.py  p.py  populate_data.py  pylock.toml  pyproject.toml  response_cache.json  server.py  test_csci1300.py  update_rmp_review_course_ids.py
backend/alembic/: env.py
backend/alembic/versions/: 050657818bfa_drop_degree_ids.py  09436d1e6cc4_student_time_prefs.py  13419fcd90a0_.py  29d85b65c779_cleanup3.py  343e29eefd47_cleanup1.py  3a85ab316567_idx_course_code.py  3fd82163b39f_.py  4d75ca507945_degree_major_change.py  4df9902208f2_add_ratings.py  51a911853026_add_meeting_times_to_sections.py  5f72efe8f9b3_.py  6086349db7a6_cleanup2.py  6acd8f643cf1_add_userinfo_columns.py  8407d5169b83_add_saved_course_codes.py  849ec7c5735c_.py  87b5327ae0fa_initial.py  886fc8b45fb9_cleanup4.py  9a5f1ce95d8d_courses_sections_change.py  a1b2c3d4e5f6_add_rmp_fields_to_instructors.py  b2c3d4e5f6a7_add_rmp_reviews_table.py  c14cee024217_courses.py  c332d1611f02_add_department_to_instructors.py  (+4 more)
backend/api/: settings.py
backend/backend/: config.py  get_courses.py  server.py  services.py
backend/backend/api/: courses.py  (+4 more)
backend/billiken_blueprint/: chromadb.py  config.py  dependencies.py  services.py
backend/data/: .gitignore  data.example.db
backend/data_dumps/: attributes.json  courses.json  degrees.json  instructors.json  math_professors_with_reviews.json  sections.json
backend/dev-certs/: jwt.pem  jwt.pub
backend/scripts/: build_seed_db.py  check_instructor_rmp_data.py  clean_rmp_reviews.py  create_vector_embeddings.py  delete_test_instructors.py  dump_data.py  import_data.py  import_rmp_ratings.py  merge_duplicate_instructors.py  populate_data.py  reproduce_issue.py  run_dev.sh  update_instructor_rmp_data.py  update_rmp_review_course_ids.py
backend/src/: main.py  services.py  variables.py
backend/tests/: conftest.py
bb-backend/: get_courses.py  pyproject.toml  server.py
bb-backend/alembic/: env.py
bb-backend/billiken_blueprint/: dependencies.py  services.py
(+393 files in other folders)
