[project]
name = "api"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Jake Bounds", email = "jakebounds.personal@gmail.com"},
    {name = "Kiara Mathews", email = "abc@gmail.com"},
    {name = "Jennifer Oishee", email = "abc@gmail.com"},
    {name = "Yeeon Ryu", email = "abc@gmail.com"}
]
dependencies = ["fastapi[standard]>=0.118.2", "pyjwt[crypto]>=2.10.1", "pwdlib[argon2]>=0.2.1", "aiosqlite>=0.21.0", "sqlalchemy[asyncio]>=2.0.43", "alembic>=1.16.5"]
requires-python = "==3.13.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
